JSDialog: Calc: Sort dialog: fix width without breaking spelling dialog
This fixes regression introduce in: Fix Spell checker js Dialog
- fd630d427f304b5e31646e5ae220ac602d3f453b

By reading the code, it seems there was a fix for the spelling
suggestion (that comes as an image from core). It fixed the width,
before that the image was being resized to fit the parent's width.
- This fix still works but it ended up affecting any other
.ui-scrollwindow (that is not .formulabar)
	- which means that (for **any** text content) the content will not
	wrap at all even if it causes overflows and it will occupy
	only as much space as it needs and not the full parent's
	width.
	- Affected dialogs: Sort dialog's ui-scrollwindow was occupying
	only enough space to display its contents, leaving a big white
	space on the side

The present commit applies the max-content (that should never be
applied to text) solely when we have drawing-area child

--- a/browser/css/jsdialogs.css
+++ b/browser/css/jsdialogs.css
@@ -206,6 +206,10 @@ td.jsdialog > [id^='table-box']:not(.sidebar) {
 	overflow: auto;
 	max-height: 500px;
 	max-width: 700px;
+}
+/* - Also used in SpellingDialog where suggestion come in form
+     of an image*/
+.jsdialog.ui-scrollwindow.has-ui-drawing-area {
 	width: max-content;
 }
 
